Opt: upgrade AGP and gralde version to adapter Android Studio Flamingo